@@ -64,6 +64,7 @@ Corregido bloqueo de semáforos en Windows
 Corregido cálculo de uso de cpu cuando el footer está desactivado
 Corregido asignación de esxdos handler root dir al cargar un archivo .nex sin indicar path desde linea de comandos
 Corregido bug al restaurar un snapshot ZSF con DivIDE activado
+Corregido segfault al pulsar CTRL-C en consola
 
 ----
 
