@@ -64,6 +64,7 @@ Fixed semaphore locking on Windows
 Fixed cpu usage calculation when footer is disabled
 Fixed setting esxdos handler root dir when loading a .nex file without path from command line
 Fixed bug restoring ZSF snapshot with DivIDE enabled
+Fixed segfault when pressing CTRL-C on console
 
 ----
 
